Native/Test/KL/CORE-130.kl
function myFunction( io Integer a, io Integer b) 
{ 
  b = a * 2; 
} 

function myCallingFunction() 
{ 
  var Integer b = 2; 
  myFunction(12,b); 
  myFunction(12,13,14,b); 
}
